services title / non-finished

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fonts/Montserrat/font-Montserrat.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>hlegal - Illia BAIEV</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <section class="services">
+            <div class="title-bloc">
+                <a href="/" class="title-link">Services</a>
+                <p class="title-text">What can we do better than others?</p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
