--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
     <title>hlegal - Illia BAIEV</title>
 </head>
 <body>
-    <div class="wrapper">
-        <section class="services">
-            <div class="title-bloc">
-                <a href="/" class="title-link">Services</a>
-                <p class="title-text">What can we do better than others?</p>
+    <section class="services">
+        <div class="wrapper">
+            <div class="services-bloc">
+                <div class="title-bloc">
+                    <a href="/" class="title-link">Services</a>
+                    <p class="title-text">What can we do better than others?</p>
+                </div>
+                <div class="services-menu">
+                    <div class="service-item">
+                        <div class="service-item-image">
+                            <img src="./images/Ecommerce.svg" alt="Ecommerce image">
+                        </div>
+                        <div class="service-item-text">
+                            <p class="service-item-title">IT and e-commerce</p>
+                            <p class="service-item-description">
+                                An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </body>
 </html>
