section partners, sectiom services - done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="services-bloc">
                     <div class="title-bloc">
                         <a href="/" class="title-link">Services</a>
-                        <p class="title-text">What can we do better than others?</p>
+                        <h2 class="title-text">What can we do better than others?</h2>
                     </div>
                     <div class="services-menu">
                         <div class="service-item">
@@ -86,6 +86,58 @@
                                 </p> 
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="wrapper">
+                <div class="some-content">
+                    <p>Next home task - non done</p>
+                </div>
+            </div>
+        </section>
+        <section class="partners">
+            <div class="wrapper-partners">
+                <div class="partners-bloc">
+                    <h3>They already trust us</h3>
+                    <div class="partners-menu">
+                        <a href="/" class="p-hillel">
+                            <img src="./images/Hillel-Logo-OneLine-White-Uk.png" alt="Hillel image-link">
+                        </a>
+                        <a href="/" class="p-wanna-biz">
+                            <img src="./images/wanna-biz.png" alt="Wanna-biz image-link">
+                        </a>
+                        <a href="/" class="p-tapgerine">
+                            <img src="./images/tapgerine.png" alt="Tapgerine image-link">
+                        </a>
+                        <a href="/" class="p-3dlook">
+                            <img src="./images/3dlook.png" alt="3D look image-link">
+                        </a>
+                        <a href="/" class="p-orangear">
+                            <img src="./images/orangear.png" alt="Orangear image-link">
+                        </a>
+                        <a href="/" class="p-adtelligent">
+                            <img src="./images/adtelligent.png" alt="Adtelligent image-link">
+                        </a>
+                        <a href="/" class="p-clickky">
+                            <img src="./images/clickky.png" alt="Clickky image-link">
+                        </a>
+                        <a href="/" class="p-ecoleasing">
+                            <img src="./images/ecoleasing.png" alt="Ecoleasing image-link">
+                        </a>
+                        <a href="/" class="p-infratek">
+                            <img src="./images/inftatek.png" alt="Infra Tek image-link">
+                        </a>
+                        <a href="/" class="p-citypark">
+                            <img src="./images/citypark.png" alt="City park image-link">
+                        </a>
+                        <a href="/" class="p-artPrintStudio">
+                            <img src="./images/artPrintStudio.png" alt="Art Print Studio image-link">
+                        </a>
+                        <a href="/" class="p-ultimateCard">
+                            <img src="./images/ultimateCard.png" alt="Ultimate Card image-link">
+                        </a>
                     </div>
                 </div>
             </div>
