--- a/index.html
+++ b/index.html
@@ -10,80 +10,89 @@
 </head>
 <body>
     <main>
-        <section class="services">
-            <div class="wrapper">
-                <div class="services-bloc">
-                    <div class="title-bloc">
-                        <a href="/" class="title-link">Services</a>
-                        <h2 class="title-text">What can we do better than others?</h2>
+        <section class="homepage">
+            <div class="first-page">
+                <div class="wrapper">
+                    <div class="some-content">
+                        <p>Next home task - non done</p>
                     </div>
-                    <div class="services-menu">
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Ecommerce.svg" alt="Ecommerce icon image">
-                            </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">IT and e-commerce</p>
-                                <p class="service-item-description">
-                                    An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.
-                                </p>
-                            </div>
+                </div>
+            </div>
+            <div class="services">
+                <div class="wrapper">
+                    <div class="services-bloc">
+                        <div class="title-bloc">
+                            <a href="/" class="title-link">Services</a>
+                            <h2 class="title-text">What can we do better than others?</h2>
                         </div>
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Support.svg" alt="Support icon image">
+                        <div class="services-menu">
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Ecommerce.svg" alt="Ecommerce icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">IT and e-commerce</p>
+                                    <p class="service-item-description">
+                                        An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">Comprehensive daily
-                                    legal support</p>
-                                <p class="service-item-description">
-                                    In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.
-                                </p>
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Support.svg" alt="Support icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">Comprehensive daily
+                                        legal support</p>
+                                    <p class="service-item-description">
+                                        In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Group.svg" alt="Group icon image">
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Group.svg" alt="Group icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">Structuring corporate relationships</p>
+                                    <p class="service-item-description">
+                                        Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.
+                                    </p>
+                                </div>
+                                
                             </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">Structuring corporate relationships</p>
-                                <p class="service-item-description">
-                                    Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.
-                                </p>
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Trust.svg" alt="Trust icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">Building contractual relations</p>
+                                    <p class="service-item-description">
+                                        Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.
+                                    </p>
+                                </div>
                             </div>
-                            
-                        </div>
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Trust.svg" alt="Trust icon image">
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Protection.svg" alt="Protection icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">Protection of business, intellectual property</p>
+                                    <p class="service-item-description">
+                                        And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.
+                                    </p> 
+                                </div>
                             </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">Building contractual relations</p>
-                                <p class="service-item-description">
-                                    Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Protection.svg" alt="Protection icon image">
-                            </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">Protection of business, intellectual property</p>
-                                <p class="service-item-description">
-                                    And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.
-                                </p> 
-                            </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="service-item-image">
-                                <img src="./images/Layer 3.svg" alt="Layer icon image">
-                            </div>
-                            <div class="service-item-text">
-                                <p class="service-item-title">Judicial representation</p>
-                                <p class="service-item-description">
-                                    Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?
-                                </p> 
+                            <div class="service-item">
+                                <div class="service-item-image">
+                                    <img src="./images/Layer 3.svg" alt="Layer icon image">
+                                </div>
+                                <div class="service-item-text">
+                                    <p class="service-item-title">Judicial representation</p>
+                                    <p class="service-item-description">
+                                        Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?
+                                    </p> 
+                                </div>
                             </div>
                         </div>
                     </div>
