section team done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en, ua">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
                 <div class="wrapper">
                     <div class="services-bloc">
                         <div class="title-bloc">
-                            <a href="/" class="title-link">Services</a>
+                            <a href="/" class="title-link red">Services</a>
                             <h2 class="title-text">What can we do better than others?</h2>
                         </div>
                         <div class="services-menu">
@@ -101,9 +101,29 @@
         </section>
         <section class="team">
             <div class="wrapper">
-                <div class="some-content">
-                    <p>Next home task - non done</p>
+                <div class="slide-team">
+                    <div class="team-member">
+                        <div class="photo-container">
+                            <img src="./images/slide.png" alt="Photo of team member">
+                        </div>
+                        <div class="slide-description">
+                            <div class="title-bloc">
+                                <a href="/" class="title-link">команда</a>
+                                <h2 class="title-text">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</h2>
+                            </div>
+                            <div class="team-member-text">
+                                <p class="member-name">Олександр Олександровський</p>
+                                <p class="member-position">Керуючий партнер</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-menu">
+                        <button class="active-ellipsis"></button>
+                        <button></button>
+                        <button></button>
+                    </div>
                 </div>
+                <div class="change-slide"></div>
             </div>
         </section>
         <section class="partners">
