--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="wrapper">
+                <div class="some-content">
+                    <p>Next home task - non done</p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
