--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en, ua">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -85,7 +85,7 @@
                             </div>
                             <div class="service-item">
                                 <div class="service-item-image">
-                                    <img src="./images/Layer 3.svg" alt="Layer icon image">
+                                    <img src="./images/Layer-3.svg" alt="Layer icon image">
                                 </div>
                                 <div class="service-item-text">
                                     <p class="service-item-title">Judicial representation</p>
