section experience done

--- a/index.html
+++ b/index.html
@@ -18,11 +18,36 @@
                     </div>
                 </div>
             </div>
+            <div class="experience">
+                <div class="wrapper">
+                    <div class="experience-bloc">
+                        <div class="experience-menu">
+                            <div class="experience-menu-container">
+                                <a href="/" class="experience-active">Consistent</a>
+                                <a href="/">Customer oriented</a>
+                                <a href="/">Innovative</a>
+                                <a href="/">Business oriented</a>
+                            </div>
+                        </div>
+                        <div class="separated-line">1</div>
+                        <div class="experience-text">
+                            <div class="experience-title">
+                                We turn the idea of legal services
+                            </div>
+                            <div class="experience-description">
+                                <p>
+                                    Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="services">
                 <div class="wrapper">
                     <div class="services-bloc">
                         <div class="title-bloc">
-                            <a href="/" class="title-link red">Services</a>
+                            <a href="/" class="title-link">Services</a>
                             <h2 class="title-text">What can we do better than others?</h2>
                         </div>
                         <div class="services-menu">
