--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <a href="/">Business oriented</a>
                             </div>
                         </div>
-                        <div class="separated-line">1</div>
+                        <div class="separated-line"></div>
                         <div class="experience-text">
                             <div class="experience-title">
                                 We turn the idea of legal services
