--- a/index.html
+++ b/index.html
@@ -661,8 +661,36 @@
         </section>
         <footer>
             <div class="wrapper">
-                <div class="some-content">
-                    <p>Some content</p>
+                <div class="footer-section">
+                    <div class="separated-line">
+                    </div>
+                    <div class="footer-content">
+                        <div class="content-first-p">
+                            <div class="address">
+                                <address>Kyiv, Mechnikova str., 14/1</address>
+                                <a href="/" class="address-link">On map</a>
+                            </div>
+                            <div class="footer-contacts">
+                               <div class="footer-fb">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="39" height="38" viewBox="0 0 39 38" fill="none">
+                                    <g clip-path="url(#clip0_120978_2850)">
+                                      <path d="M38.5 19.1161C38.5 8.55857 29.9934 0 19.5 0C9.00658 0 0.5 8.55857 0.5 19.1161C0.5 28.6575 7.44803 36.5659 16.5312 38V24.6419H11.707V19.1161H16.5312V14.9046C16.5312 10.1136 19.3678 7.46723 23.7078 7.46723C25.7866 7.46723 27.9609 7.84059 27.9609 7.84059V12.545H25.5651C23.2048 12.545 22.4688 14.0185 22.4688 15.5302V19.1161H27.7383L26.8959 24.6419H22.4688V38C31.552 36.5659 38.5 28.6575 38.5 19.1161Z" fill="#24A3FF"/>
+                                    </g>
+                                    <defs>
+                                      <clipPath id="clip0_120978_2850">
+                                        <rect width="38" height="38" fill="white" transform="translate(0.5)"/>
+                                      </clipPath>
+                                    </defs>
+                                </svg>
+                               </div>
+                                <a class="footer-tel" href="tel:0800 211 927">0800 211 927</a>
+                                <a class="footer-email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
+                            </div>
+                        </div>
+                        <div class="content-second-p">
+                            <p>© 2021 HLEGAL Law company, LLC</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
