--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <a href="/" class="ru-language">РУ</a>
                             <a href="/" class="en-language active-page">EN</a>
                         </div>
-                        <a href="tel:0800 211 927" class="contacts">0800 211 927</a>
+                        <a href="tel:0800211927" class="contacts">0800 211 927</a>
                     </div>
                     <div class="logo-menu">
                         <div class="logo-page">
@@ -53,31 +53,29 @@
                             <div class="page-selected">services</div>
                         </div>
                         <button class="menu" type="button">
-                            <div class="menu-burger">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 32" fill="none">
                                     <path d="M7 10.5H25" stroke="white" stroke-width="2"/>
                                     <path d="M7 16.5H25" stroke="white" stroke-width="2"/>
                                     <path d="M7 22.5H25" stroke="white" stroke-width="2"/>
                                 </svg>
-                                <div class="background-menu-mobile">
-                                    <div class="menu-mobile">
-                                        <div class="close-section">
-                                            <svg xmlns="http://www.w3.org/2000/svg"         width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                                <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
-                                                <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
-                                            </svg>
-                                        </div>
-                                        <nav>
-                                            <a href="/" class="about-us-page">about us</a>
-                                            <a href="/" class="services-page">services</a>
-                                            <a href="/" class="team-page">team</a>
-                                            <a href="/" class="publications-page current-page">publications</a>
-                                            <a href="/" class="contact-page">contact</a>
-                                        </nav>
-                                    </div>
-                                </div>
-                            </div>
                         </button>
+                        <div class="background-menu-mobile">
+                            <div class="menu-mobile">
+                                <div class="close-section">
+                                    <svg xmlns="http://www.w3.org/2000/svg"         width="32" height="32" viewBox="0 0 32 32" fill="none">
+                                        <path d="M7 7L25 25" stroke="#EC6F5D" stroke-width="2"/>
+                                        <path d="M25 7L7 25" stroke="#EC6F5D" stroke-width="2"/>
+                                    </svg>
+                                </div>
+                                <nav>
+                                    <a href="/" class="about-us-page">about us</a>
+                                    <a href="/" class="services-page">services</a>
+                                    <a href="/" class="team-page">team</a>
+                                    <a href="/" class="publications-page current-page">publications</a>
+                                    <a href="/" class="contact-page">contact</a>
+                                </nav>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="head-desktop">
@@ -88,7 +86,7 @@
                             <a href="/" class="en-language active-page">EN</a>
                         </div> 
                         <address>Kyiv, Mechnikova str., 14/1</address>
-                        <a href="tel:0800 211 927" class="contacts">0800 211 927</a>
+                        <a href="tel:0800211927" class="contacts">0800 211 927</a>
                         <a href="/" class="facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
                                 <g clip-path="url(#clip0_120978_2805)">
@@ -683,7 +681,7 @@
                                     </defs>
                                 </svg>
                                </div>
-                                <a class="footer-tel" href="tel:0800 211 927">0800 211 927</a>
+                                <a class="footer-tel" href="tel:0800211927">0800 211 927</a>
                                 <a class="footer-email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
                             </div>
                         </div>
