--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="logo-section">
                     <img src="./images/Symbol-1.svg" alt="Logotype">
                     <p>you legal solutions provider</p>
-                    <div class="scroll">
+                    <a class="scroll">
                         <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none">
                             <g clip-path="url(#clip0_22728_12366)">
                               <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
@@ -145,7 +145,7 @@
                               </clipPath>
                             </defs>
                         </svg>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="experience">
