--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="logo-section">
                     <img src="./images/Symbol-1.svg" alt="Logotype">
                     <p>you legal solutions provider</p>
-                    <a class="scroll">
+                    <a href="#pin" class="scroll">
                         <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none">
                             <g clip-path="url(#clip0_22728_12366)">
                               <circle opacity="0.5" cx="21" cy="21" r="20" stroke="white" stroke-width="2"/>
@@ -147,6 +147,7 @@
                         </svg>
                     </a>
                 </div>
+                <div id="pin"></div>
             </div>
             <div class="experience">
                 <div class="wrapper">
@@ -177,7 +178,7 @@
                 <div class="wrapper">
                     <div class="services-bloc">
                         <div class="title-bloc">
-                            <a href="/" class="title-link">Services</a>
+                            <a href="./services.html" class="title-link">Services</a>
                             <h2 class="title-text">What can we do better than others?</h2>
                         </div>
                         <div class="services-menu">
@@ -669,7 +670,7 @@
                                 <a href="/" class="address-link">On map</a>
                             </div>
                             <div class="footer-contacts">
-                               <div class="footer-fb">
+                               <a href="/" class="footer-fb">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="38" viewBox="0 0 39 38" fill="none">
                                     <g clip-path="url(#clip0_120978_2850)">
                                       <path d="M38.5 19.1161C38.5 8.55857 29.9934 0 19.5 0C9.00658 0 0.5 8.55857 0.5 19.1161C0.5 28.6575 7.44803 36.5659 16.5312 38V24.6419H11.707V19.1161H16.5312V14.9046C16.5312 10.1136 19.3678 7.46723 23.7078 7.46723C25.7866 7.46723 27.9609 7.84059 27.9609 7.84059V12.545H25.5651C23.2048 12.545 22.4688 14.0185 22.4688 15.5302V19.1161H27.7383L26.8959 24.6419H22.4688V38C31.552 36.5659 38.5 28.6575 38.5 19.1161Z" fill="#24A3FF"/>
@@ -680,7 +681,7 @@
                                       </clipPath>
                                     </defs>
                                 </svg>
-                               </div>
+                               </a>
                                 <a class="footer-tel" href="tel:0800211927">0800 211 927</a>
                                 <a class="footer-email" href="mailto:contact@forstudy.space">contact@forstudy.space</a>
                             </div>
