--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <h2 class="title-text">What can we do better than others?</h2>
                         </div>
                         <div class="services-menu">
-                            <a href="/" class="service-item">
+                            <a href="./services-it-and-e-commerce.html" class="service-item">
                                 <div class="service-item-image">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
                                         <path d="M23.7339 28.125C24.8379 28.125 25.7339 27.229 25.7339 26.125V18.325C25.7339 14.838 28.5709 12 32.0579 12C35.5449 12 38.3829 14.838 38.3829 18.325V26.125C38.3829 27.229 39.2779 28.125 40.3829 28.125C41.4869 28.125 42.3829 27.229 42.3829 26.125V18.325C42.3839 12.632 37.7519 8 32.0579 8C26.3659 8 21.7339 12.632 21.7339 18.325V26.125C21.7339 27.229 22.6299 28.125 23.7339 28.125Z" fill="url(#paint0_linear_22728_12613)"/>
